--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/DalinMathew/AutoFilterBotV3",
-    "repository": "https://github.com/DalinMathew/AutoFilterBotV3",
+    "website": "https://github.com/Ridhinch/AutoFilterBotV3/edit/master/app.json",
+    "repository": "https://github.com/Ridhinch/AutoFilterBotV3/edit/master/app.json",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
